--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
         <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/1/1e/Stranger_Things_4.png/230px-Stranger_Things_4.png"  alt="">
     </div>
     <hr>
+
+    <div>
+        <h2>Temporada 5</h2>
+        <p>A quinta e última temporada de Stranger Things começa filmagens em janeiro de 2024, e ainda não tem data de estreia definida. Os quatro primeiros anos estão disponíveis para streaming na Netflix.</p>
+        <img src="https://media.fstatic.com/Pd1XqOztZHanUi5_G9Hn65Tun_U=/322x478/smart/filters:format(webp)/media/movies/covers/2023/03/cats_rqConYd.jpg" alt="">
+        <a href="https://www.instagram.com/strangerthingstv/" target="_blank">Stranger Things On Ig</a>
+        <br>
+    </div>
+    <hr>
+    
 </body>
 
 </html>
